# quicknav-rl

./: .gitignore  .pre-commit-config.yaml  README.md  diff_drive_gymnax_env.py  gemini.py  pyproject.toml  rejax.ipynb  requirements.txt  training.ipynb
examples/: algos_comparison.ipynb  intro.ipynb  mlp.ipynb  model_comparison.ipynb  performance.ipynb  ppo.ipynb  sac.ipynb  td3.ipynb  tune_ppo.py  tune_sac.py
examples/tuning/: model_tuning_utils.py  tune_gtrxl.py  tune_lstm.py  tune_mlp.py  tune_ppo.py  tune_sac.py  tune_td3.py  utils.py
examples/tuning/results/: PPO_study.db  README.md  SAC_study.db  TD3_study.db  best_PPO_params.json  best_SAC_params.json  best_TD3_params.json
src/: __init__.py  constants.py  env.py  env_vis.py  eval.py  geometry.py  lidar.py  rooms.py  utils.py
src/criteria/: gaussian_policy.py  ppo.py
src/models/: critic.py  gtrxl.py  gtrxl2.py  lstm.py  mlp.py
src/notebooks/: intro.ipynb
src/quicknav_jax/: __init__.py  env.py  eval.py  lidar.py  rooms.py
src/quicknav_numpy/: __init__.py  env.py  example.py  geometry.py  lidar.py  rooms.py
src/quicknav_utils/: __init__.py  collision.py  env_vis.py
