[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quiknav-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["imageio>=2.37.0", "rejax>=0.1.1"]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[tool.setuptools.packages.find]
where = ["src"]
