[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quiknav-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.37.0",
    "rejax>=0.1.1",
    "jax[cuda]==0.5.3",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.18.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
